--- a/compose.yml
+++ b/compose.yml
@@ -3,9 +3,9 @@ services:
   postgres:
     image: postgres:15-alpine
     environment:
-      POSTGRES_USER: demo_user
-      POSTGRES_PASSWORD: demo_pass
-      POSTGRES_DB: demo_db
+      POSTGRES_USER: demo
+      POSTGRES_PASSWORD: demo
+      POSTGRES_DB: demo
     ports:
       - "5432"
     volumes:
