disabled hikari auto-commit

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     open-in-view: false
     show-sql: true
 
+  #  As rule of thumb, for local-resource JPA Transactions, it is always good
+  #  practice to configure the connection pool (e.g HikariCP) to disable auto-commit
   datasource:
     hikari:
       auto-commit: false
@@ -14,3 +16,7 @@ spring:
   liquibase:
     liquibase-schema: public
     enabled: true
+
+#logging:
+#  level:
+#    org.hibernate.engine.transaction.internal.TransactionImpl: DEBUG
