--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -7,7 +7,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+        java: [ 17,21 ]
 
     steps:
       - name: Checkout repository
