--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,16 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>com.github.gavlyukovskiy</groupId>
+			<artifactId>datasource-proxy-spring-boot-starter</artifactId>
+			<version>1.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.gavlyukovskiy</groupId>
+			<artifactId>flexy-pool-spring-boot-starter</artifactId>
+			<version>1.11.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -54,18 +64,6 @@
 			<artifactId>spring-boot-testcontainers</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-<!--		<dependency>-->
-<!--			<groupId>com.github.gavlyukovskiy</groupId>-->
-<!--			<artifactId>datasource-proxy-spring-boot-starter</artifactId>-->
-<!--			<version>1.11.0</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>com.github.gavlyukovskiy</groupId>-->
-<!--			<artifactId>flexy-pool-spring-boot-starter</artifactId>-->
-<!--			<version>1.11.0</version>-->
-<!--		</dependency>-->
-
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>junit-jupiter</artifactId>
