--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,6 @@ decorator:
           acquisition: 50
           lease: 1000
 
-#logging:
-#  level:
-#    org.hibernate.engine.transaction.internal.TransactionImpl: DEBUG
+logging:
+  level:
+    org.hibernate.engine.transaction.internal.TransactionImpl: DEBUG
