--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,12 @@ spring:
   datasource:
     hikari:
       auto-commit: false
+      max-lifetime: 30000
+      connection-timeout: 15000
+      #https://github.com/brettwooldridge/HikariCP/wiki/About-Pool-Sizing
+      maximum-pool-size: 10
+      leak-detection-threshold: 60000
+
 
   liquibase:
     liquibase-schema: public
