--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: demo
+    name: jpa-production-ready-template
 
   datasource:
     hikari:
@@ -15,7 +15,24 @@ spring:
     enabled: true
 
   jpa:
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: UTC
+          batch_size: 15
+        order_inserts: true
+        order_updates: true
+        connection:
+          provider_disables_autocommit: true
+        query:
+          in_clause_parameter_padding: true
+          fail_on_pagination_over_collection_fetch: true
+          plan_cache_max_size: 4096
+
     open-in-view: false
+    show-sql: false
+    hibernate:
+      ddl-auto: none
 
 #decorator:
 #  datasource:
