--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  shutdown: graceful
+
 spring:
   application:
     name: jpa-production-ready-template
@@ -13,6 +16,9 @@ spring:
   liquibase:
     liquibase-schema: public
     enabled: true
+
+  lifecycle:
+    timeout-per-shutdown-phase: 20s
 
   jpa:
     properties:
