added project build instructions

--- a/compose.yml
+++ b/compose.yml
@@ -1,15 +1,21 @@
-version: '3.8'
+name: jpa-jooq-template
+
 services:
   postgres:
-    image: postgres:15-alpine
+    image: postgres:16-alpine
     environment:
       POSTGRES_USER: demo
       POSTGRES_PASSWORD: demo
       POSTGRES_DB: demo
     ports:
-      - "5432"
+      - "5432" #мапится на случайный локальный порт, Boot сам найдёт
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U app -d app" ]
+      interval: 5s
+      timeout: 3s
+      retries: 20
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
 
 volumes:
-  postgres_data:
+  pgdata:
