--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.3</version>
+		<version>3.5.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -28,6 +28,7 @@
 		<url/>
 	</scm>
 	<properties>
+		<jarFinalName>${project.artifactId}</jarFinalName>
 		<java.version>24</java.version>
 	</properties>
 	<dependencies>
@@ -95,10 +96,33 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>${jarFinalName}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<goals>package</goals>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
 			</plugin>
 
 			<plugin>
@@ -107,6 +131,9 @@
 				<configuration>
 					<changeLogFile>src/main/resources/db/changelog/db.changelog-master.yaml</changeLogFile>
 					<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+					<url>${db.url}</url>
+					<username>${username}</username>
+					<password>${password}</password>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -132,10 +159,10 @@
 				</executions>
 				<configuration>
 					<jdbc>
-						<driver>org.postgresql.Driver</driver>
-						<url>${env.DEMO_DB_URL}</url>
-						<user>${env.DEMO_DB_USER}</user>
-						<password>${env.DEMO_DB_PASS}</password>
+						<driver>${db.driver}</driver>
+						<url>${db.url}</url>
+						<user>${username}</user>
+						<password>${password}</password>
 					</jdbc>
 					<!-- Generator parameters -->
 					<generator>
